Refactor thread, rework on rest of feedback
Signed-off-by: Stefan Höhn <mail@stefanhoehn.com>